Added some initial code

--- a/config/config_sample.ini
+++ b/config/config_sample.ini
@@ -7,11 +7,11 @@
 ; config version 0.01
 
 [Bot]
-Token = TOKEN
-Admins = 00000000000000000
+token = TOKEN
+admins = 00000000000000000
 
 [Settings]
 ; default volume (can be changed in runtime)
-Volume = 50
+volume = 50
 ; the bot will join this channel right after start
-InitialChannel = 00000000000000000
+initial_channel = 00000000000000000
